Add two pages and nav links

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,6 +14,9 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>This is <em>MY</em> Astro site!</h1>
+    <h1>My Astro Site</h1>
+    <h2>About me!</h2>
+    <p>... and my new Astro site!</p>
+    <p>Currently, I'm working through Astro's introductory tutorial</p>
   </body>
 </html>
