--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,6 +14,7 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>This is <em>MY</em> Astro site!</h1>
+    <h1>This here is the Blog!</h1>
+    <p>I assume at some point we'll make this a template of sorts?...</p>
   </body>
 </html>
