--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -42,9 +46,7 @@ const fontWeight = "bolder";
     </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>My Astro Site</h1>
     <h2>{pageTitle}</h2>
     <p>... and my new Astro site!</p>
@@ -79,5 +81,9 @@ const fontWeight = "bolder";
         <p>My goal is not 3 days.</p>
       )
     }
+    <Footer />
+    <script>
+      import "../scripts/menu.ts";
+    </script>
   </body>
 </html>
