--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
 const pageTitle = "Blog Page";
 ---
 
@@ -11,9 +15,7 @@ const pageTitle = "Blog Page";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>{pageTitle}</h1>
     <p>I assume at some point we'll make this a template of sorts?...</p>
     <ul>
@@ -27,5 +29,9 @@ const pageTitle = "Blog Page";
         <a href="/posts/post-3/">Post 3</a>
       </li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu.ts";
+    </script>
   </body>
 </html>
