--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -9,6 +9,7 @@ const { platform, username } = Astro.props;
     background-color: rebeccapurple;
     text-decoration: none;
     font-weight: bolder;
+    border-radius: 0.25rem;
   }
 </style>
 
