--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "About Me";
 
@@ -24,66 +25,46 @@ const textCase = "uppercase";
 const fontWeight = "bolder";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-    <style define:vars={{ skillColor, textCase, fontWeight }}>
-      h1 {
-        color: rebeccapurple;
-        font-size: 4rem;
+<style define:vars={{ skillColor, textCase, fontWeight }}>
+  .skill {
+    color: var(--skillColor);
+    font-family: monospace;
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style>
+
+<BaseLayout pageTitle={pageTitle}>
+  <p>... and my new Astro site!</p>
+  <p>Currently, I'm working through Astro's introductory tutorial</p>
+  <p>Here are a few facts about one of my cats:</p>
+  <ul>
+    <li>Her name is {identity.firstName}.</li>
+    <li>
+      Her breed originated from {identity.country} and she is a {
+        identity.occupation
       }
-      .skill {
-        /* color: olive; */
-        color: var(--skillColor);
-        font-family: monospace;
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <h1>My Astro Site</h1>
-    <h2>{pageTitle}</h2>
-    <p>... and my new Astro site!</p>
-    <p>Currently, I'm working through Astro's introductory tutorial</p>
-    <p>Here are a few facts about one of my cats:</p>
-    <ul>
-      <li>Her name is {identity.firstName}.</li>
-      <li>
-        Her breed originated from {identity.country} and she is a {
-          identity.occupation
-        }
-      </li>
-      <li>
-        Her hobbies are:
-        <ul>
-          {identity.hobbies.map((hobby) => <li>{hobby}</li>)}
-        </ul>
-      </li>
-      <li>
-        Her skills include:
-        <ul>
-          {skills.map((skill) => <li class="skill">{skill}</li>)}
-        </ul>
-      </li>
-    </ul>
-    {happy && <p>I am happy to be learning Astro!</p>}
-    {finished && <p>I finished this tutorial!</p>}
-    {
-      goal === 3 ? (
-        <p>My goal is to finish in 3 days.</p>
-      ) : (
-        <p>My goal is not 3 days.</p>
-      )
-    }
-    <Footer />
-    <script>
-      import "../scripts/menu.ts";
-    </script>
-  </body>
-</html>
+    </li>
+    <li>
+      Her hobbies are:
+      <ul>
+        {identity.hobbies.map((hobby) => <li>{hobby}</li>)}
+      </ul>
+    </li>
+    <li>
+      Her skills include:
+      <ul>
+        {skills.map((skill) => <li class="skill">{skill}</li>)}
+      </ul>
+    </li>
+  </ul>
+  {happy && <p>I am happy to be learning Astro!</p>}
+  {finished && <p>I finished this tutorial!</p>}
+  {
+    goal === 3 ? (
+      <p>My goal is to finish in 3 days.</p>
+    ) : (
+      <p>My goal is not 3 days.</p>
+    )
+  }
+</BaseLayout>
