--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
 html {
   background-color: #f1f5f9;
   font-family: sans-serif;
+  color: #232232;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 
 h1 {
   margin: 1rem 0;
-  font-size: 2.5rem;
+  font-size: 4rem;
 }
 
 ul {
