--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,21 +1,19 @@
 ---
 import "../styles/global.css";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPostLink from "../components/BlogPostLink.astro";
 
+const allPosts = await Astro.glob("../pages/posts/*.md");
 const pageTitle = "Blog Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <p>I assume at some point we'll make this a template of sorts?...</p>
   <ul>
-    <li>
-      <a href="/posts/post-1/">Post 1</a>
-    </li>
-    <li>
-      <a href="/posts/post-2/">Post 2</a>
-    </li>
-    <li>
-      <a href="/posts/post-3/">Post 3</a>
-    </li>
+    {
+      allPosts.map((post) => (
+        <BlogPostLink url={post.url} title={post.frontmatter.title} />
+      ))
+    }
   </ul>
 </BaseLayout>
