--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,8 +22,13 @@ h1 {
   font-size: 4rem;
 }
 
-ul {
+ul, ol {
   padding-left: 1rem;
+}
+
+pre {
+  padding: .25rem .5rem;
+  border-radius: .25rem;
 }
 
 /* nav styles */
