--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,31 +1,44 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-
 const { frontmatter } = Astro.props;
-
-const localeDateStringFromIsoString = (isoString: string): string => {
-  const [year, month, date] = isoString.slice(0, 10).split("-").map(Number);
-  return new Date(year, month - 1, date).toLocaleDateString();
-};
-
-const localDate = localeDateStringFromIsoString(frontmatter.pubDate);
 ---
 
-<style>
-  .blog-link {
-    text-decoration: none;
-    color: teal;
-  }
+<BaseLayout pageTitle={frontmatter.title}>
+  <p><em>{frontmatter.description}</em></p>
+  <p>{frontmatter.pubDate.slice(0, 10)}</p>
 
-  .blog-link:hover {
-    text-decoration: underline;
-  }
-</style>
+  <p>Written by: {frontmatter.author}</p>
 
-<BaseLayout>
-  <a class="blog-link" href="/blog/">Back to blogs</a>
-  <h1>{frontmatter.title}</h1>
-  <p>Published on {localDate}</p>
-  <p>Written by {frontmatter.author}</p>
+  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+
+  <div class="tags">
+    {
+      frontmatter.tags.map((tag: string) => (
+        <p class="tag">
+          <a href={`/tags/${tag}`}>{tag}</a>
+        </p>
+      ))
+    }
+  </div>
+
   <slot />
 </BaseLayout>
+<style>
+  a {
+    color: #00539f;
+  }
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .tag {
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: 0.5em;
+    padding: 0.5em 1em;
+    font-size: 1.15em;
+    background-color: #f8fcfd;
+  }
+</style>
